WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
78911
Fix some warnings encountered during the GTK+ build
https://bugs.webkit.org/show_bug.cgi?id=78911
Summary
Fix some warnings encountered during the GTK+ build
Martin Robinson
Reported
2012-02-17 10:24:23 PST
This bug tracks fixing a few warnings encountered during the GTK+ build.
Attachments
Patch
(6.48 KB, patch)
2012-02-17 10:28 PST
,
Martin Robinson
xan.lopez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2012-02-17 10:28:00 PST
Created
attachment 127607
[details]
Patch
Xan Lopez
Comment 2
2012-02-17 10:37:03 PST
Comment on
attachment 127607
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=127607&action=review
> Source/WebCore/page/GestureTapHighlighter.cpp:182 > + LayoutRect next = i != (drawableRects.size() - 1) ? drawableRects.at(i + 1) : LayoutRect();
I think < fits better the spirit of this code, tbh. So, i < (drawableRects.size - 1).
Martin Robinson
Comment 3
2012-02-17 10:52:09 PST
Committed
r108095
: <
http://trac.webkit.org/changeset/108095
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug