Fix some warnings encountered during the GTK+ build https://bugs.webkit.org/show_bug.cgi?id=78911

Reviewed by Xan Lopez.

Source/WebCore:

No new tests. These are just fixes for warnings.

* page/GestureTapHighlighter.cpp: Avoid using potentially signed operations on
a size_t type. Use size_t for iterating over members of a vector.
* platform/graphics/texmap/TextureMapperBackingStore.cpp: Use size_t where necessary.
(WebCore::TextureMapperTiledBackingStore::createOrDestroyTilesIfNeeded): Ditto.
* platform/graphics/texmap/TextureMapperLayer.cpp: Ditto.
(WebCore::TextureMapperLayer::computeTransformsRecursive): Ditto.
(WebCore::TextureMapperLayer::paintSelfAndChildren): Ditto.
(WebCore::TextureMapperLayer::intermediateSurfaceRect): Ditto.

Source/WebKit2:

* UIProcess/API/gtk/WebKitLoaderClient.cpp:
(attachLoaderClientToView): Initialize a new member of the loader client struct.

Canonical link: https://commits.webkit.org/95928@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108095 268f45cc-cd09-0410-ab3c-d52691b4dbfc